# navicord

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  config.yml
src/: fmanager.h  fmanager.hpp  main.cpp  main.rs  nrestclient.cpp  nrestclient.hpp
